traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: type mismatch;
 found   : Unit
 required: Boolean
{right(); test=(!isFacingWall())}; return(test); left()}
                                                     ^